--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
 MONGODB_URI=mongodb+srv://BoneMechanic:Filmora_123@inventorydb.dwkim9e.mongodb.net/
-CORS_ORIGIN=https://inventory-management-82e5f.web.app
+CORS_ORIGIN=*
 ACCESS_TOKEN_SECRET=CEiSyXMIbbjC3BSo4QKY1FpDpbpYKOTY
 REFRESH_TOKEN_SECRET=6CAV1uIT8WBvwROB3AomfdHy6J14OsLB
 ACCESS_TOKEN_LIFE=1d
