--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon backend/src/index",
     "start": "node backend/src/index",
     "client": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev":"nodemon backend/src/index",
     "build-client": "cd frontend && npm install && npm run build",
     "build": "npm install"
   },
