--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
 MONGODB_URI=mongodb+srv://BoneMechanic:Filmora_123@inventorydb.dwkim9e.mongodb.net/
-CORS_ORIGIN=*
+CORS_ORIGIN=http://localhost:3000
 ACCESS_TOKEN_SECRET=CEiSyXMIbbjC3BSo4QKY1FpDpbpYKOTY
 REFRESH_TOKEN_SECRET=6CAV1uIT8WBvwROB3AomfdHy6J14OsLB
 ACCESS_TOKEN_LIFE=1d
